; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/gdiplus/extr_image.c_decode_image_wic.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/gdiplus/extr_image.c_decode_image_wic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Ok = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i32, i32**)* @decode_image_wic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @decode_image_wic(i32* %0, i32 %1, i32 %2, i32** %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32** %3, i32*** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i64 @initialize_decoder_wic(i32* %12, i32 %13, i32** %10)
  store i64 %14, i64* %11, align 8
  %15 = load i64, i64* %11, align 8
  %16 = load i64, i64* @Ok, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %4
  %19 = load i64, i64* %11, align 8
  store i64 %19, i64* %5, align 8
  br label %29

20:                                               ; preds = %4
  %21 = load i32*, i32** %10, align 8
  %22 = load i32, i32* @FALSE, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load i32**, i32*** %9, align 8
  %25 = call i64 @decode_frame_wic(i32* %21, i32 %22, i32 0, i32 %23, i32** %24)
  store i64 %25, i64* %11, align 8
  %26 = load i32*, i32** %10, align 8
  %27 = call i32 @IWICBitmapDecoder_Release(i32* %26)
  %28 = load i64, i64* %11, align 8
  store i64 %28, i64* %5, align 8
  br label %29

29:                                               ; preds = %20, %18
  %30 = load i64, i64* %5, align 8
  ret i64 %30
}

declare dso_local i64 @initialize_decoder_wic(i32*, i32, i32**) #1

declare dso_local i64 @decode_frame_wic(i32*, i32, i32, i32, i32**) #1

declare dso_local i32 @IWICBitmapDecoder_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
